tests/custom/STARIS_2022/basic/set-operators/in-type-error-03/stderr.expected
Error:
    in.essence:2:21:
  |
2 | such that a = (1 in true)
  |                     ^^^^
Type error:
	Expected: "Container of  int"
	Got: bool

cat: *.solution: No such file or directory
